--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,5 @@
-$breakpoint-small: 700px;
+$breakpoint-small: 600px;
+$breakpoint-medium: 1000px;
 $breakpoint-large: 1400px;
 
 * {
@@ -9,30 +10,50 @@ html, body {
     margin: 0;
 }
 
+header {
+    text-align: center;
+}
+
 main {
     width: 100%;
     background: transparent;
-}
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 5px;
+    padding: 0 5px;
 
-section {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px;
-    width: calc(100vw - 5px * 2);
-    height: calc(100vw - 5px * 2);
+    section {
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 5px;
+    }
 }
 
 @media only screen and (min-width: $breakpoint-small) {
-    section {
-        width: calc((100vw - 2 * 5px * 2) / 2);
-        height: calc((100vw - 2 * 5px * 2) / 2);
+    main {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (min-width: $breakpoint-medium) {
+    main {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media only screen and (min-width: $breakpoint-large) {
-    section {
-        width: calc((100% - 3 * 5px * 2) / 3);
-        height: calc((100% - 3 * 5px * 2) / 3);
+    main {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    width: 100%;
+    height: 100%;
+    &:hover {
+        text-decoration: underline;
     }
 }
