--- a/main.css
+++ b/main.css
@@ -22,6 +22,23 @@ main section {
   border: 1px solid black;
   border-radius: 5px;
   padding: 5px;
+  cursor: default;
+}
+main section .repoName:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+main section:hover {
+  background-color: #d9d9d9;
+}
+main section .gitStar, main section .gitFork {
+  display: block;
+  float: right;
+  cursor: pointer;
+  margin-right: 5px;
+}
+main section .gitStar:hover sub, main section .gitFork:hover sub {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 600px) {
@@ -38,14 +55,4 @@ main section {
   main {
     grid-template-columns: repeat(4, 1fr);
   }
-}
-a {
-  text-decoration: none;
-  color: black;
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-a:hover {
-  text-decoration: underline;
 }
